--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "packages/*"
   ],
   "dependencies": {
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/swagger": "^7.0.4",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@pinia/nuxt": "^0.4.11",
     "@prisma/client": "^4.16.0",
-    "bcrpyt": "^2.0.0"
+    "bcrpyt": "^2.0.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "nuxt-icon": "^0.4.1",
+    "ohmyfetch": "^0.4.21",
+    "sass": "^1.63.6"
   }
 }
